--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div>
             <h1>Rema Ramesh Paul</h1>
             <p class="tag">Automation Test Engineer — Selenium | Java | Oracle Fusion Cloud</p>
-            <p class="tag">Pune, Maharashtra • remapaul07@gmail.com • +91 93736 31243</p>
+            <p class="tag">Pune, Maharashtra • remapaul07@gmail.com </p>
           </div>
         </div>
         <nav>
@@ -147,7 +147,7 @@
             <h2>Contact</h2>
             <div class="contact">
               <div class="cert">Email: <a href="mailto:remapaul07@gmail.com" style="color:var(--accent);text-decoration:none">remapaul07@gmail.com</a></div>
-              <div class="cert">Phone: +91 93736 31243</div>
+             
               <div class="cert">LinkedIn: <a href="https://www.linkedin.com/in/rema-paul-819918257/" target="_blank" style="color:var(--accent);text-decoration:none">/in/rema-paul-819918257</a></div>
               <div style="margin-top:8px"><a class="btn" href="Rema_Resume_2026.pdf" download>Download Resume (PDF)</a></div>
             </div>
@@ -156,8 +156,8 @@
           <section id="certs" class="section fade-in">
             <h2>Certifications</h2>
             <div class="certs">
-              <div class="cert">Oracle Fusion Cloud Applications ERP - Process Essentials</div>
-              <div class="cert">Oracle Fusion Cloud Applications SCM - Process Essentials</div>
+              <div class="cert"><a href= "Oracle_Fusion_Cloud_Applications_ERP.pdf" download >Oracle Fusion Cloud Applications ERP - Process Essentials</a></div>
+              <div class="cert"><a href= "Oracle_Fusion_Cloud_Applications_ERP.pdf" download >Oracle Fusion Cloud Applications SCM - Process Essentials</div>
               <div class="cert">ExcelR - Software Testing Course</div>
               <div class="cert">AI White Belt L1 V1</div>
             </div>
